--- a/web_01/music/templates/music/music_detail.html
+++ b/web_01/music/templates/music/music_detail.html
@@ -1,74 +1,10 @@
-<!-- loads path to static fil<es or css -->
+<!-- this loads the base hmtl into this html -->
+{% extends 'music/base.html' %}
+
+
+{% block body %}
+
 {% load staticfiles %}
-<!-- load bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-<!-- this loads your own css style -->
-<link rel = "stylesheet" type = "text/css" href = "{% static 'music/style.css'%}" />
-
-
-
-<nav class="navbar navbar-inverse">
-    <div class = "container-fluid">
-
-        <!-- Collapse button -->
-        <div class = "navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#CollapseBar" >
-                <span class = "icon-bar"> </span>
-                <span class = "icon-bar"> </span>
-                <span class = "icon-bar"> </span>
-            </button>
-            <a class = "navbar-brand" href = "{% url 'music:music' %}" >HOME</a>
-        </div>
-
-        <!-- ITEMS on Nav bar-->
-        <div class="collapse navbar-collapse" id="CollapseBar" >
-            <ul class =  "nav navbar-nav">
-                <!-- music icons -->
-                <li class ="">
-                    <a href="{% url 'music:music' %}">
-                        <span class = "glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp; Albums
-                    </a>
-                </li>
-
-                <li class ="">
-                    <a href="#">
-                        <span class = "glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp; Songs
-                    </a>
-                </li>
-
-                <!-- search bar -->
-                <form class = "navbar-form navbar-left" role = "search" method = "get" action="#">
-
-                    <div class = "form-group">
-                        <input type = "text" class="form-control" name = "query" value="" >
-                    </div>
-
-                    <button type = "submit" class="btn btn-default">Search</button>
-
-                    <ul class = "nav navbar-nav navbar-right" >
-                        <li class ="">
-                            <a href="#">
-                                <span class = "glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;
-                                Add Album
-                            </a>
-                        </li>
-
-                        <li class ="">
-                            <a href="#">
-                                <span class = "glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;
-                                Log Out
-                            </a>
-                        </li>
-
-                    </ul>
-                </form>
-
-            </ul>
-
-        </div>
-
-    </div>
-</nav>
 
 <img src = "{{ var_album.album_logo }}">
 
@@ -97,3 +33,4 @@
     <input type = "submit" value = "Favorite">
 </form>
 
+{% endblock %}
