--- a/web_01/music/templates/music/music_main.html
+++ b/web_01/music/templates/music/music_main.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> {{var_page_title}} </title>
-</head>
-<body>
-<ul>
-{% if var_all_albums %}
-    {% for album in var_all_albums %}
-    <li> <a href="{% url 'music:musicDetails' album.id %}"> {{ album.artist }} </a></li>
-    {% endfor %}
-{% else %}
-    <h3> You don't have albums </h3>
-{% endif %}
-</ul>
-</body>
-</html>
+{% extends 'music/base.html' %}
+
+{% block body %}
+    <ul>
+    {% if var_all_albums %}
+        {% for album in var_all_albums %}
+        <li> <a href="{% url 'music:musicDetails' album.id %}"> {{ album.artist }} </a></li>
+        {% endfor %}
+    {% else %}
+        <h3> You don't have albums </h3>
+    {% endif %}
+    </ul>
+{% endblock %}
