--- a/web_01/music/templates/music/music_main.html
+++ b/web_01/music/templates/music/music_main.html
@@ -1,10 +1,38 @@
 {% extends 'music/base.html' %}
 
+
 {% block body %}
+    <title> Music </title>
+
     <ul>
     {% if var_all_albums %}
         {% for album in var_all_albums %}
-        <li> <a href="{% url 'music:musicDetails' album.id %}"> {{ album.artist }} </a></li>
+        <li>
+            <!-- album logo -->
+            <img src = "{{ album.album_logo.url }}" width = 200><br>
+
+            <!-- link to album -->
+            <a href="{% url 'music:musicDetails' album.id %}"> {{ album.artist }} </a>
+
+            <!-- Edit Album -->
+            <form action="{% url 'music:musicEditAlbum' album.id %}" method = "get" style = "display: inline;">
+                {% csrf_token %}
+                <input type = "hidden" name = "album_id" value = "{{ album.id }}">
+                <button type = "submit" class="btn btn-default btn-sm">
+                    <span class = "glyphicon glyphicon-edit"></span>
+                </button>
+            </form>
+
+            <!-- Delete Album -->
+            <form action="{% url 'music:musicDeleteAlbum' album.id %}" method = "post" style = "display: inline;">
+                {% csrf_token %}
+                <input type = "hidden" name = "album_id" value = "{{ album.id }}">
+                <button type = "submit" class="btn btn-default btn-sm">
+                    <span class = "glyphicon glyphicon-trash"></span>
+                </button>
+            </form>
+
+        </li>
         {% endfor %}
     {% else %}
         <h3> You don't have albums </h3>
